Eventos en JavaScript: interactuando con usuarios 13/29

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Manipulación del DOM básica</title>
 </head>
 <body>
-    <h1 class="verde">Manipulación del DOM básica</h1>
-    <p>Esto es un párrafo</p>
-    <p class="parrafito">Esto es un párrafo con clase</p>
-    <p id="pid">Esto es un párrafo con ID</p>
+    <h1>Manipulación del DOM básica</h1>
+ 
 
-    <input type="text" placeholder="Escribe algo aquí" value="123">
+    <input id="calculo1" placeholder="Escribe algo aquí" >
+    <input id="calculo2" placeholder="Escribe algo aquí" >
+    <button id="btnCalcular" onclick="btnOnClick()">Calcular</button>
+    
+    <p id="result"></p>
 
     <script src="./script.js"></script>
-    <p class=""></p>
     
 </body>
 </html> 
